--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="welcome">Welcome</string>
     <string name="closeDrawer">Close the Drawer</string>
     <string name="openDrawer">Open the Drawer</string>
+    <string name="home">Home</string>
+    <string name="items">Items</string>
+    <string name="log_out">Log Out</string>
+    <string name="find_us">Find Us</string>
 </resources>
