--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,5 @@
     <string name="description">Description</string>
     <string name="item_name">Item Name</string>
     <string name="item_price">Item Price</string>
-    <string name="more_detail">More Detail</string>
+    <string name="more_detail"><u>More Detail</u></string>
 </resources>
